--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "~8.15.0",
@@ -30,6 +31,7 @@
     "jest": "27.5.1",
     "nx": "14.4.3",
     "prettier": "^2.6.2",
+    "supertest": "^6.2.4",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
     "typescript": "~4.7.2"
