--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "4.17.2",
+    "mkdirp": "^1.0.4",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -20,6 +22,7 @@
     "@nrwl/linter": "14.4.3",
     "@nrwl/node": "14.4.3",
     "@nrwl/workspace": "14.4.3",
+    "@types/cors": "^2.8.12",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
