--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@prisma/client": "^4.1.1",
     "cors": "^2.8.5",
     "express": "4.17.2",
     "mkdirp": "^1.0.4",
@@ -34,6 +35,7 @@
     "jest": "27.5.1",
     "nx": "14.4.3",
     "prettier": "^2.6.2",
+    "prisma": "^4.1.1",
     "supertest": "^6.2.4",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
